<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_body"
        android:icon="@drawable/bb"
        android:title="@string/title_tool" />
    <item
        android:id="@+id/navigation_plus"
        android:icon="@drawable/plus"
        android:title="@string/title_plus"/>

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/community"
        android:title="@string/title_community"
    />
    <item
        android:id="@+id/navigation_userInfo"
        android:title="@string/title_userInfo"
        android:icon="@drawable/user"/>

</menu>