<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/fragment_register_nickname"
        android:gravity="center"
        android:hint="@string/name_nickname"
        android:background="@drawable/rounded_rectangle"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"/>
    <EditText
        android:id="@+id/fragment_register_password"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:background="@drawable/rounded_rectangle"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"/>


    <EditText
        android:id="@+id/fragment_register_height"
        android:gravity="center"
        android:hint="@string/name_height"
        android:background="@drawable/rounded_rectangle"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/fragment_register_weight"
        android:hint="@string/name_weight"
        android:gravity="center"
        android:background="@drawable/rounded_rectangle"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/fragment_register_gender"
        android:gravity="center"
        android:hint="@string/name_gender"
        android:background="@drawable/rounded_rectangle"
        android:layout_gravity="center_horizontal"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"/>


</LinearLayout>