<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/userInfo_edit"
    >

    <LinearLayout
        android:id="@+id/userInfo_edit_icon"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="@string/name_change_icon"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />

        <ImageView
            android:id="@+id/userInfo_edit_camera"
            android:layout_width="80dp"
            android:layout_height="match_parent"
             />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/name_nickname"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userInfo_edit_nickname"
            style="?android:attr/textViewStyle"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userInfo_edit_sex"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="160dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/name_gender"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/userInfo_edit_gender"
            style="?android:attr/textViewStyle"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <Button
        android:layout_marginTop="280dp"
        android:id="@+id/userInfo_edit_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle_solid_green"
        android:alpha=".6"
        android:textStyle="bold"
        android:text="@string/name_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</FrameLayout>